syntax = "proto3";
package influxdata.iox.router.v1;
option go_package = "github.com/influxdata/iox/router/v1";

import "influxdata/iox/router/v1/router.proto";

service RouterService {
  // List configured routers.
  rpc ListRouter(ListRouterRequest) returns (ListRouterResponse);

  // Update router config (upsert).
  rpc UpdateRouter(UpdateRouterRequest) returns (UpdateRouterResponse);

  // Delete router.
  rpc DeleteRouter(DeleteRouterRequest) returns (DeleteRouterResponse);
}

message ListRouterRequest {}

message ListRouterResponse {
  repeated Router routers = 1;
}

message UpdateRouterRequest {
  Router router = 1;
}

message UpdateRouterResponse {}

message DeleteRouterRequest {
  string router_name = 1;
}

message DeleteRouterResponse {}
